--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "hbs": "^4.2.0",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "newsapi": "^2.4.1",
     "nodemon": "^3.0.3",
     "path": "^0.12.7",
